第二屏到第四屏内容

--- a/src/index.html
+++ b/src/index.html
@@ -45,25 +45,185 @@
       </div>
     </header>
     <div id="content">
-      <ul>
+      <ul class="content-list">
         <li>
-          <section>
-            home
+          <section class="home">
+            <!--轮播图-->
+            <ul class="home-carousel">
+              <li class="common-title show">one layer</li>
+              <li class="common-title">two layer</li>
+              <li class="common-title">three layer</li>
+              <li class="common-title">four layer</li>
+            </ul>
+            <!--小圆点-->
+            <ul class="home-point">
+              <li class="active"></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
           </section>
         </li>
         <li>
-          <section>
-            Course
+          <section class="course">
+            <h2 class="course-title common-title">
+              <span>EINIGE</span><br>
+              <span>UNSERER</span><br>
+              <span>KUNDEN</span>
+            </h2>
+            <div class="course-text commonText">
+              <p>Das Kundenvertrauen in unsere Kompetenz ist die notwendige Basis einer erfolgreichen Zusammenarbeit, gleichzeitig aber auch das größte Lob, das man uns entgegenbringen kann.</p>
+              <br>
+              <p>Diese und viele weitere große und kleine Kunden vertrauen uns seit Jahren, was uns stolz macht, und dafür sagen wir an dieser Stelle einfach mal.</p>
+            </div>
+            <ul class="course-list">
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+              <li>
+                <div class="front"></div>
+                <div class="back">
+                  满堂花醉三千客,一剑霜寒十四州
+                </div>
+              </li>
+            </ul>
           </section>
         </li>
         <li>
-          <section>
-            Works
+          <section class="works">
+            <h2 class="works-title common-title">
+              <span>EINBLICK</span><br>
+              <span>ERKENNTNIS</span><br>
+              <span>ERGEBNIS</span>
+            </h2>
+            <ul class="works-list cleanfix">
+              <li>
+                <img src="./images/worksimg1.jpg" alt="">
+                <div class="works-mast">
+                  <span>给岁月以文明</span>
+                  <div></div>
+                </div>
+              </li>
+              <li>
+                <img src="./images/worksimg2.jpg" alt="">
+                <div class="works-mast">
+                  <span>给岁月以文明</span>
+                  <div></div>
+                </div>
+              </li>
+              <li>
+                <img src="./images/worksimg3.jpg" alt="">
+                <div class="works-mast">
+                  <span>给岁月以文明</span>
+                  <div></div>
+                </div>
+              </li>
+              <li>
+                <img src="./images/worksimg4.jpg" alt="">
+                <div class="works-mast">
+                  <span>给岁月以文明</span>
+                  <div></div>
+                </div>
+
+              </li>
+            </ul>
+            <div class="works-robot"></div>
           </section>
         </li>
         <li>
-          <section>
-            About
+          <section class="about">
+            <h2 class="about-title common-title">
+              <span>DIE</span><br>
+              <span>SPEZIELLE</span><br>
+              <span>VIELFALT</span>
+            </h2>
+            <div class="about-text commonText">
+              <p>Der bunte Medienmix ist die Faszination die uns antreibt und das, was man an uns schätzt. Von A bis Z und von vorne bis hinten nehmen wir Ihr Projekt unter unsere Fittiche und lassen es zu etwas Großartigem heranwachsen.</p>
+            </div>
+            <ul class="about-list">
+              <li>
+                <img src="./images/about2.jpg" alt="">
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </li>
+              <li>
+                <img src="./images/about4.jpg" alt="">
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </li>
+            </ul>
+            <div class="about-line"></div>
           </section>
         </li>
         <li>
