--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
     <header id="header">
       <div class="header-main">
         <h1 class="logo"><a href="javascript:;"><img src="./images/logo.png" alt="logo"></a></h1>
+        <div class="music">
+          <audio src="./images/audio.mp3" loop></audio>
+        </div>
         <ul class="nav">
           <li class="active">
             <a href="javascript:;">
@@ -150,6 +153,10 @@
                 </div>
               </li>
             </ul>
+            /<!--开机动画纸飞机-->
+            <div class="plane1"></div>
+            <div class="plane2"></div>
+            <div class="plane3"></div>
           </section>
         </li>
         <li>
@@ -191,6 +198,10 @@
               </li>
             </ul>
             <div class="works-robot"></div>
+            <!--开机动画铅笔-->
+            <div class="pencel1"></div>
+            <div class="pencel2"></div>
+            <div class="pencel3"></div>
           </section>
         </li>
         <li>
@@ -227,12 +238,40 @@
           </section>
         </li>
         <li>
-          <section>
-            Team
+          <section class="team">
+            <h2 class="team-title common-title">
+              <span>WIR SIND</span><br>
+              <span>VOXELAIR</span>
+            </h2>
+            <div class="team-text commonText">
+              <p>WIR SIND
+                VOXELAIR Wir sind seit 2002 eine Full-Service-Werbeagentur mit Stammsitz in Heimsheim, zwischen Stuttgart und Karlsruhe. </p>
+              <br>
+              <p>Über 60 Jahre Erfahrung vereinen das gesamte VoxelAir-Team. Dabei hat jedes Voxel neben professionellem Allroundwissen auch sein ganz spezielles Gebiet, um selbst die individuellsten Kundenwünsche schnell und kompetent umzusetzen.</p>
+            </div>
+            <ul class="team-person">
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
           </section>
         </li>
       </ul>
+      <ul class="side-point">
+        <li class="active"></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
     </div>
+    <!--开机动画-->
+    <div id="boot-animation">
+      <div class="up"></div>
+      <div class="down"></div>
+      <div class="line"></div>
+    </div><div id=""></div>
   </div>
 </body>
 </html>
